--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -7,6 +7,7 @@ body {
   font-family: "Be Vietnam Pro";
 }
 
+
 .gradient-button {
     background: linear-gradient(360deg, #1B1B20 0%, #1B1B20 50%, #222229 100%);
     color: #989899;
@@ -27,6 +28,7 @@ body {
     transition: all 120ms ease-out;
 
 }
+
 
 .gradient-button:hover {
     background: linear-gradient(180deg, #16161A 0%, #1E1E24 100%);
@@ -52,6 +54,26 @@ body {
   --color-emeraldGreen: #16A249;
   --color-tangerine: #F97415;
   --color-violetPurple: #9470DB;
+}
+.grad-button {
+    background: linear-gradient(360deg, #023E8A 0%, #3C83F6 50%, #3C83F6 100%);
+    color: #FFFFFF;
+    text-shadow: 0px 0.52px 1.05px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.24), 0px 0.5px 1px 0px rgba(0, 0, 0, 0.4) inset;
+
+    box-shadow:
+        inset 0 1px 2px -1px rgba(255, 255, 255, 0.1),
+        inset 0 0 1px rgba(0, 0, 0, 0.05),
+        inset 0 -1px 0.5px rgba(0, 0, 0, 0.02),
+        inset 0 1px 1px rgba(255, 255, 255, 0.1),
+        0 2px 4px -1px rgba(0, 0, 0, 0.5);
+
+
+    border: 1px solid transparent;
+    border-top-color: #00a6fb;
+    outline: 1px #a3cef1;
+    backdrop-filter: blur(40px);
+    transition: all 120ms ease-out;
+
 }
 
 @utility font-vietnam {
